--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ color:#ffffff;
 }
 
 .footer:after{
-content: 'VarI-SIG ISMB/ECCB 2015, Dublin, Ireland.';
+content: 'VarI-SIG ISMB 2016, Orlando (FL), USA.';
 }
 
 
