--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ color:#ffffff;
 }
 
 .footer:after{
-content: 'VarI-SIG ISMB 2016, Orlando (FL), USA.';
+content: 'VarI-COSI ISMB/ECCB 2017, Prague, Czech Republic.';
 }
 
 
