--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ color:#ffffff;
 }
 
 .footer:after{
-content: 'VarI-COSI ISMB/ECCB 2019, Basel, Switzerland.';
+content: 'VarI-COSI - Virtual ISMB 2020.';
 }
 
 
